# ACOS

./: .coverage  .gitignore  CLAUDE.md  GAMEPLAN.md  IMPLEMENTATION_ORDER.md  README.md  REPO_MAP.md  acos-backend.spec  alembic.ini  coverage.json  pyproject.toml  requirements-encryption.txt
backend/: README.md  config.py  database.py  logging_config.py  main.py  observability.py  recovery.py  requirements-dev.txt  requirements.txt  server_entry.py
backend/api/: deps.py  errors.py
backend/ingestion/: entity_extractor.py  errors.py  jobs.py  normalizer.py  pipeline.py  retry.py  security.py
backend/middleware/: timing.py
backend/models/: __init__.py  application.py  audit.py  auth.py  base.py  document.py  experience.py  generation.py  global_pattern.py  ingestion_failure.py  knowledge_graph.py  maintenance.py  (+12 more)
database/: README.md  acos.db  acos.db-shm  acos.db-wal
docs/: 01_PRODUCT_VISION.md  02_TECHNICAL_ARCHITECTURE.md  03_CLAUDE_DEVELOPMENT_RULES.md  04_DATABASE_SCHEMA.md  05_PROMPT_LIBRARY.md  06_RAG_DESIGN.md  07_PLUGIN_ORCHESTRATION.md  08_ROADMAP.md  09_DESIGN_GUIDELINES.css  ARCHITECTURE_OVERVIEW.md  BACKLOG.md  COVER_LETTER_ENGINE_SPEC.md  CURRENT_SPRINT.md  DATA_IMPORT.md  DECISIONS.md  FRONTEND_DESIGN_SYSTEM.md  INDEX.md  KNOWN_ISSUES.md  MODEL_SETUP.md  OPTIMIZATION_SYSTEM.md  PACKAGING.md  PERFORMANCE_LOG.md  RESUME_ENGINE_SPEC.md  SECURITY_DEPENDENCIES.md  TROUBLESHOOTING.md  USER_GUIDE.md  VERSIONING.md
extension/: README.md  build.mjs  manifest.json  package.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: haptics.rs  keychain.rs  lib.rs  main.rs
scripts/: README.md  build_backend.sh  build_dmg.sh  generate_icons.py  migrate_consolidate_collections.py  setup_ollama.sh  test_github_bullets.py  test_resume_sections.py
(+664 files in other folders)
