[package]
name = "acos"
version = "0.1.0"
description = "AI Career Operating System"
authors = ["Andrew Nguyen"]
edition = "2021"

[lib]
name = "acos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "acos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
