[package]
name = "acos"
version = "0.1.0"
description = "AI Career Operating System"
authors = ["Andrew Nguyen"]
edition = "2021"

[lib]
name = "acos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "acos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# 13.9 background auto-update (ADR-011): the updater verifies the minisign signature
# against the bundled pubkey before applying; process plugin enables relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS-only: native haptic feedback (NSHapticFeedbackManager). Per-class feature
# so only the NSHapticFeedback bindings compile, not all of AppKit.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSHapticFeedback"] }
# 16.1 (ADR-014): OS-Keychain credential storage. apple-native uses the Security
# framework directly (no extra system libs). Only the macOS KeychainStore impl
# references this; Win/Linux backends slot in behind CredentialStore in Phase 18.
keyring = { version = "3", features = ["apple-native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
